Remove default padding of autocomplete inputs to avoid misalignments

--- a/app/assets/stylesheets/content/_autocomplete.sass
+++ b/app/assets/stylesheets/content/_autocomplete.sass
@@ -160,6 +160,7 @@ mark.ui-autocomplete-match
 
       input
         height: 100%
+        padding: 0
         -webkit-box-sizing: border-box !important
         -moz-box-sizing: border-box !important
         box-sizing: border-box !important
